--- a/FlaskWebProject1/templates/contact.html
+++ b/FlaskWebProject1/templates/contact.html
@@ -4,9 +4,11 @@
 
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
+<h4>{{ response }}</h4>
 
 <address>
-    Wiess College<br />
+
+    Wiess College <br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
